
    @FunctionalInterface
public interface Move {
     void move();
}
